Bug 331149 - Problem with implementation of grades and boxes and the working of '3 consecutive right answers' mode
Summary: Problem with implementation of grades and boxes and the working of '3 consecu...
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.9.4
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: parley bug tracker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-15 09:46 UTC by Amarvir Singh
Modified: 2014-02-21 21:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Amarvir Singh 2014-02-15 09:46:20 UTC
These issues occur mainly in the practice mode, and become clear when using the '3 consecutive right answers', alternative learning mode.

These issues are:

1. In alternative learning mode, the next grade box lights up, even though the question hasn't been answered correctly thrice consecutively, only to return back to the previous grade when the question is asked again.

2. For a new word, that hasn't been learned yet, if the user answers it correctly the first time, ie. he/she knew the word already, the grade should increase from 0 to 2. (0 to 1 for having learnt the word, and 1 to 2 for correctly answering it). This would signify that the user knew the word already. But, even though the practice mode shows this increase in grades through the boxes, it doesn't actually increase the grade twice. The next time this word is seen in practice, it is actually at grade 1. This is actually an effect of issue 3.

3. Parley doesn't increase the grade from 0 to 1 (new to learned) just because it has been seen once, in case the user answered it correctly. The increase seen is actually due to the "answered correctly" part and not the "this word has been learned" part. The effect of this issue can been clearly seen in alternative mode. In case the word is answered once correctly, the next occurrence of the same word doesn't have the grade 1 box lit up. And starting a new session without answering thrice or answering wrong, results in the word being marked as unseen.

PS: These also occur in the normal mode, but it is much clearer in alt. learning mode.

Reproducible: Always

Steps to Reproduce:
1. Go to Configure Practice->Advanced Settings and check 'Require 3 consecutive correct answers'.
2. Start a lesson in practice mode in multiple choice mode (any other than flashcard mode actually). Getting a completely new lesson or removing grades first is recommended.
3. Answer the questions, and notice the grade boxes.
Actual Results:  
1. If the question was unseen before (grade 0), and you answered it correctly, the 2nd grade box lights up even in the 3 consec. mode.
2. When the question appears again (3 consec. answer mode), it again has no boxes lit up. This causes confusion to the user.
3. If you do not answer the word thrice, and don't answer it wrong. (ie say only once and exit practice), and then start the same lesson again, none of the boxes is lit up. (this means it views the word as unseen and not practiced, which obviously isn't true).
4. In case you correctly answered a completely new(unseen) word, ie in the first try in normal mode or thrice consecutively in alt. mode, the 2nd grade box lights up. But when you start the lesson again, only the 1st box is lit up.

Expected Results:  
1. On seeing the question once, (whether it was answered correctly or not, and whether it was in normal mode or alt. mode) the word should always go to grade 1. No exceptions.
2. Now, if the word is accepted as correct (after 3rd consec. answer in alt mode), only then should it increase to grade 2. (this will be seen as jumping grade 1 in normal mode).
3. As a result, on confronting the same word/question again in practice, it should have 2 boxes lit up and not 1, if the above sequence of events did occur. (you already knew the word and answered it correctly)

I have submitted a patch that fixes this bug, kindly check it.
Comment 1 Amarvir Singh 2014-02-15 09:54:13 UTC
The patch: https://git.reviewboard.kde.org/r/115754/
Comment 2 Amarvir Singh 2014-02-21 21:15:10 UTC
Git commit 7ab775f4d860f7525dfe74a1154cc3b9856db8ff by Amarvir Singh.
Committed on 15/02/2014 at 09:05.
Pushed by amarvirsingh into branch 'master'.

Fix grade computation and box highlighting

Fixes three issues in 3-right-answers mode:
1. Alternative learning mode: the next grade box lighted up, even though the
   question hasn't been answered correctly thrice consecutively
2. For yet unlearned words: if user answers correctly the first time, the grade
   should increase from 0 to 2. Reasoning: 0 to 1 for having learned the word,
   and 1 to 2 for correctly answered.
3. Grade from 0 to 1 was not increased correctly when user answered it correctly.
   In case the word is answered correctly once, the next occurrence of the same
   word doesn't have the grade 1 box lit up. Starting a new session without
   answering thrice or answering wrong, results in the word being marked as
   unseen.
REVIEW: 115754

M  +13   -3    src/practice/practicestatemachine.cpp
M  +20   -3    src/practice/testentry.cpp
M  +4    -2    src/practice/testentry.h

http://commits.kde.org/parley/7ab775f4d860f7525dfe74a1154cc3b9856db8ff