Fix grade computation and box highlighting

Fixes three issues in 3-right-answers mode:
1. Alternative learning mode: the next grade box lighted up, even though the
   question hasn't been answered correctly thrice consecutively
2. For yet unlearned words: if user answers correctly the first time, the grade
   should increase from 0 to 2. Reasoning: 0 to 1 for having learned the word,
   and 1 to 2 for correctly answered.
3. Grade from 0 to 1 was not increased correctly when user answered it correctly.
   In case the word is answered correctly once, the next occurrence of the same
   word doesn't have the grade 1 box lit up. Starting a new session without
   answering thrice or answering wrong, results in the word being marked as
   unseen.

BUG: 331149
REVIEW: 115754