src/practice/practicestatemachine.cpp
@@ -16,6 +16,7 @@
 
 #include "parleydocument.h"
 
+#include "prefs.h"
 #include "abstractbackendmode.h"
 #include "comparisonbackendmode.h"
 #include "conjugationbackendmode.h"
@@ -203,7 +204,11 @@ void PracticeStateMachine::updateFrontend()
 
     grade_t grade = m_mode->currentGradeForEntry();
     grade_t goodGrade = qMax(grade, grade_t(KV_LEV1_GRADE)); // if the word hasn't been practiced yet, use grade 1 as a base
-    if (m_current->statisticBadCount() == 0) {
+
+    // Normal mode: check if current word was not answered wrong -> if yes, mark next grade as achievable
+    // Alternative mode (3 consecutive answers): check if word was not answered wrong and two consecutive times correct -> if yes, mark next grade as achievable
+    if ((!(Prefs::altLearn()) && m_current->statisticBadCount() == 0) ||
+        (m_current->statisticBadCount() == 0 && m_current->answeredCorrectInSequence() == 2 && Prefs::altLearn())) {
         goodGrade = qMax(KV_LEV2_GRADE, qMin(grade + 1, KV_MAX_GRADE));
     }
 
@@ -232,13 +237,18 @@ void PracticeStateMachine::updateFrontend()
 
 void PracticeStateMachine::gradeEntryAndContinue()
 {
+    grade_t currentGrade = m_mode->currentGradeForEntry();
+
     if (m_frontend->resultState() == AbstractFrontend::AnswerCorrect) {
-        m_current->updateStatisticsRightAnswer();
+	m_current->updateStatisticsRightAnswer(currentGrade);
     } else {
-        m_current->updateStatisticsWrongAnswer();
+        m_current->updateStatisticsWrongAnswer(currentGrade);
     }
 
     kDebug() << "entry finished: " << m_frontend->resultState() << " change grades? " << m_current->changeGrades();
+    if (m_current->isUnseenQuestion()) {
+	m_mode->updateGrades();
+    }
     if (m_current->changeGrades()) {
         m_mode->updateGrades();
         if (m_frontend->resultState() == AbstractFrontend::AnswerCorrect) {
